--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a{
 
 /* header */
 header{
-  border-bottom: 1px solid rgb(94, 92, 92);
+  border-bottom: 1px solid rgb(146, 144, 144);
 }
 
 header img{
@@ -23,10 +23,19 @@ header span{
 }
 header li{
   list-style: none;
-  margin-right: 50px;
+  margin-right: 40px;
 }
 header li a{
   color: rgb(102, 100, 100);
-  font-size: 1.1rem;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.active{
+  border-bottom: 3px solid #3367d6;
+}
+
+li.active a{
+  color: #3367d6;
 }
 
