--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header span{
   font-size: 1.4rem;
   color: rgb(94, 92, 92);
 }
+
 header li{
   list-style: none;
   margin-right: 40px;
@@ -41,5 +42,36 @@ header li a{
 
 li.active a{
   color: #3367d6;
+}
+
+/* footer */
+
+footer{
+  background-color: #f5f5f5;
+}
+
+footer li{
+  list-style: none;
+}
+
+footer li a{
+  color: rgb(102, 100, 100);
+  font-size: 0.7rem;
+}
+
+footer li a i{
+  font-size: 0.1rem;
+}
+
+footer select{
+  width: 200px;
+}
+
+.language{
+  background-color: rgb(0, 150, 243);
+  font-size: 0.8rem;
+  padding: 0px 7px;
+  border-radius: 5px;
+  color: white;
 }
 
